--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
 
             <!-- Project Card 1 -->
             <a href="/little_mohammad_shihab.html" class="project-card">
-                <img src="assets/images/projects/project 1/display 1.jfif" alt="Project 1 Image">
+                <img src="assets/images/projects/mohammad shihab.jpg" alt="Project 1 Image">
                 <h3 class="project-title">Help us help little Shihab and his family.</h3>
                 <p class="project-description">Can you help for the further treatment of this child who has transplanted
                     kidney and liver..
                     The account information of the child's father is below.</p>
                 <div class="project-info">
                     <!-- <span class="creator">Creator: John Doe</span> -->
-                    <span class="raised">Raised: ₹5000</span>
+                    <span class="raised">Raised: <strong>₹27,75,000</strong> out of <strong>₹38,00,000</strong></span>
                 </div>
             </a>
 
             <!-- Project Card 2 -->
             <a href="/help_us_save_shamir.html" class="project-card">
-                <img src="assets/images/projects/project 2/display 2.png" alt="Project 2 Image">
+                <img src="assets/images/projects/Shamir.png" alt="Project 2 Image">
                 <h3 class="project-title">Shamir should sleep without pain for at least one day.</h3>
                 <p class="project-description">Shamir dreams of sleeping one pain-free night, but time is running out.
                     😢 When I heard his
@@ -70,13 +70,13 @@
                     I couldn’t hold back my tears. This young man is in desperate need of support.</p>
                 <div class="project-info">
                     <!-- <span class="creator">Creator: Jane Smith</span> -->
-                    <span class="raised">Raised: ₹3000</span>
+                    <span class="raised">Raised: ₹31,80,000 out of <strong>₹50,00,000</strong></span>
                 </div>
             </a>
 
             <!-- Project Card 3 -->
             <a href="/infant_sisters_in_icu.html" class="project-card">
-                <img src="assets/images/projects/project 3/display 3.jfif" alt="Project 3 Image">
+                <img src="assets/images/projects/twins.jpg" alt="Project 3 Image">
                 <h3 class="project-title">These two children need your help to survive.</h3>
                 <p class="project-description">These two children, born to Ansia, the daughter of Iqbal Ikka from
                     Mattumala,
@@ -85,7 +85,7 @@
                     emergency operation to save them.</p>
                 <div class="project-info">
                     <!-- <span class="creator">Creator: Jane Smith</span> -->
-                    <span class="raised">Raised: ₹3000</span>
+                    <span class="raised">Raised: <strong>₹23,57,000</strong> out of <strong>43,00,000</strong></span>
                 </div>
             </a>
 
