--- a/little_mohammad_shihab.html
+++ b/little_mohammad_shihab.html
@@ -42,7 +42,10 @@
             <p class="project-benefactor"><span id="project-benefactor">Benefactor:</span><span
                     id="project-benefactor-name"> Mohammad Shihab</span></p>
             <p class="project-raised"><span id="project-raised"> Raised: </span><span
-                    id="project-raised-amount">₹10,000</span></p>
+                    id="project-raised-amount">₹27,75,000</span></p>
+            <p class="project-raised"><span id="project-raised">Amount Needed: </span><span
+                    id="project-raised-amount">₹38,00,000</span></p>
+
         </div>
 
         <div class="project-info">
