--- a/help_us_save_shamir.html
+++ b/help_us_save_shamir.html
@@ -42,7 +42,9 @@
             <p class="project-benefactor"><span id="project-benefactor">Benefactor:</span><span
                     id="project-benefactor-name"> Shamir</span></p>
             <p class="project-raised"><span id="project-raised"> Raised: </span><span
-                    id="project-raised-amount">₹10,000</span></p>
+                    id="project-raised-amount">₹31,80,000</span></p>
+            <p class="project-raised"><span id="project-raised">Amount Needed: </span><span
+                    id="project-raised-amount">₹50,00,000</span></p>
         </div>
 
         <div class="project-info">
