--- a/infant_sisters_in_icu.html
+++ b/infant_sisters_in_icu.html
@@ -42,7 +42,9 @@
             <p class="project-benefactor"><span id="project-benefactor">Benefactor:</span><span
                     id="project-benefactor-name"> Ansia's Children</span></p>
             <p class="project-raised"><span id="project-raised">Raised: </span><span
-                    id="project-raised-amount">₹50,000</span></p>
+                    id="project-raised-amount">₹23,57,000</span></p>
+            <p class="project-raised"><span id="project-raised">Amount Needed: </span><span
+                    id="project-raised-amount">₹43,00,000</span></p>
         </div>
 
         <div class="project-info">
