introduced google analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJEFLLNXG1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-ZJEFLLNXG1');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helpful India</title>
@@ -70,7 +81,7 @@
                     I couldn’t hold back my tears. This young man is in desperate need of support.</p>
                 <div class="project-info">
                     <!-- <span class="creator">Creator: Jane Smith</span> -->
-                    <span class="raised">Raised: ₹31,80,000 out of <strong>₹50,00,000</strong></span>
+                    <span class="raised">Raised: <strong>₹31,80,000</strong> out of <strong>₹50,00,000</strong></span>
                 </div>
             </a>
 
