--- a/little_mohammad_shihab.html
+++ b/little_mohammad_shihab.html
@@ -15,7 +15,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HelpfulIndia - Foundation</title>
+    <title>Mohammad Shihab - HelpfulIndia</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="https://kit.fontawesome.com/691e1436e7.js" crossorigin="anonymous"></script>
 </head>
