--- a/infant_sisters_in_icu.html
+++ b/infant_sisters_in_icu.html
@@ -192,7 +192,8 @@
                                             </span>
                                         </p>
                                         <p>
-                                            <strong>Account Number:</strong> <span id="account-number">501031797669</span>
+                                            <strong>Account Number:</strong> <span
+                                                id="account-number">501031797669</span>
                                             <span class="copy-icon" onclick="copyText('account-number')">
                                                 <i class="fa fa-copy"></i>
                                             </span>
@@ -221,18 +222,6 @@
                 <div id="copy-notification" class="copy-notification">Copied to clipboard!</div>
             </div>
         </div>
-    </section>
-
-    <!-- QR Code Modal -->
-    <!-- <div id="qrModal" class="qr-modal">
-        <div class="qr-modal-content">
-            <span class="close" id="qr-modal-close">&times;</span>
-            <img src="assets/images/projects/qr codes/GooglePay_QR-5.png" alt="Enlarged QR Code" id="qr-modal-image">
-        </div>
-    </div> -->
-
-    </div>
-    </div>
     </section>
 
     <footer>
